--- a/01_React初体验/03_hello_React代码重构.html
+++ b/01_React初体验/03_hello_React代码重构.html
@@ -7,32 +7,30 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- 1.添加依赖(需要添加3个包,各司其职) -->
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
     <script type="text/babel">
-      const root = ReactDOM.createRoot(document.querySelector("#root"))
-    
-      // 1.将文本定义成变量
       let message = "Hello World"
-    
+
       function btnClick() {
-        message = "Hello React"
+        message = "hello React"
+        rootRender()
+      }
+
+      const root = ReactDOM.createRoot(document.querySelector("#root"))
+
+      function rootRender() {
         root.render(
           <div>
-            {message}
-            <button onClick={btnClick}>修改文本</button>
+            <h2>{message}</h2>
+            <button onClick={btnClick}>点击切换</button>
           </div>
         )
       }
-      root.render(
-        <div>
-          {message}
-          <button onClick={btnClick}>修改文本</button>
-        </div>
-      )
+
+      rootRender()
     </script>
   </body>
 </html>
